# Danecoin

./: CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libdanecoinconsensus.pc.in
build_msvc/: .gitignore  README.md  danecoin.sln  danecoin_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
contrib/: README.md  danecoin-cli.bash-completion  danecoin-qt.pro  danecoin-tx.bash-completion  danecoind.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  danecoin-conf.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/man/: Makefile  Makefile.am  Makefile.in  danecoin-cli.1  danecoin-qt.1  danecoin-tx.1  danecoin-wallet.1  danecoind.1
share/: genbuild.sh  setup.nsi  setup.nsi.in
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  addrdb.cpp  (+144 more)
(+864 files in other folders)
