dist_man1_MANS=

if BUILD_DANECOIND
  dist_man1_MANS+=danecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=danecoin-qt.1
endif

if BUILD_DANECOIN_CLI
  dist_man1_MANS+=danecoin-cli.1
endif

if BUILD_DANECOIN_TX
  dist_man1_MANS+=danecoin-tx.1
endif

if ENABLE_WALLET
if BUILD_DANECOIN_WALLET
  dist_man1_MANS+=danecoin-wallet.1
endif
endif
